--- a/stm32-baremetal-lab/Debug/makefile
+++ b/stm32-baremetal-lab/Debug/makefile
@@ -11,6 +11,7 @@ RM := rm -rf
 -include sources.mk
 -include Startup/subdir.mk
 -include Src/subdir.mk
+-include Experiments/002_Button_Input/subdir.mk
 -include Drivers/CustomDrivers/Src/subdir.mk
 -include objects.mk
 
